tests/src/frontend/typechecking/invalid/positional_arg.sk
class Y(a: Int, b: Float)

fun main(): void {
  a = 10;
  b = 1;
  _ = Y(a, b);
  print_string("Hello Skip!")
}
